Personal/iptables.rules
# Generated by iptables-save v1.6.2 on Tue Mar  6 17:45:13 2018
*filter
:INPUT DROP [4:661]
:FORWARD DROP [0:0]
:OUTPUT DROP [180:11256]
-A INPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.0.0/24 -p icmp -j ACCEPT
-A INPUT -p tcp -m multiport --sports 80,443,8000,8081,8443,8444,9000 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.0.0/24 -p icmp -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443,8000,8081,8443,8444,9000 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Tue Mar  6 17:45:13 2018
